   Version 0.49
   Version 0.48
   Version 0.47
   Version 0.46
   Version 0.45
   Version 0.44
   Version 0.43
   Version 0.42
   Version 0.41
   Version 0.40
   Version 0.39
   Version 0.38
   Version 0.37
   Version 0.36
   Version 0.35

-----------------------------------------------------------------------
 Version 0.54
 ============

 Released on 
  
 New features and improvements:

   - ofaMysl: implements ofaIAbout interface.
   - ofaMysl: implements ofaIProperties interface.
   - ofaPluginManager: displays instanciated objects (todo #1066).
   - ofaPluginManager: displays About page (todo #1066).
   - ofaPluginManager: displays Properties page (todo #1066).
   - ofaStreamFormat: homogeneize character display (todo #1063).
 

 Bug fixes:

   - 

 Other changes:

   - ofaIDBProvider: all methods get an instance argument (todo #1065).
   - ofaIExeCloseClose interface is renamed to ofaIExeClose (todo #1067).
   - ofaIPrefsProvider, ofaIPrefsPage: deprecated interfaces.
   - ofaIProperties: new interface which obsoletes both ofaIPrefsProvider and ofaIPrefsPage.
   - ofsBat: deprecated data structure.

-----------------------------------------------------------------------
 Version 0.53
 ============

 Released on 2016-04-07
  
 New features and improvements:

   - DDL Core v 29
   - DDL VAT v 5
   - Import a default accounts chart on dossier creation (todo #1051).
   - Export a dynamic list of exportable objects (todo #519).
   - Import a dynamic list of importable objects (todo #520).
   - VATForm: make it exportable (todo #940).
   - VATForm: make it importable (todo #939).
   - Import assistant ask for user confirmation before emptying a table (todo #1059).
   - ImporterCSV: new general CSV plugin.
   - ImporterPdfBourso: new plugin which replace (obsoleted) ImportBoursoPdf one.
   - ImporterPdfLcl: new plugin which replace (obsoleted) ImportLCLPdf one.
   - ImporterTxtBourso: new plugin which replace (obsoleted) ImportBourso one.